OS-151 fix Rose theme header overflow

--- a/themes/openy_themes/openy_rose/scss/modules/_header.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_header.scss
@@ -490,6 +490,20 @@
 
 }
 
+.viewport {
+  .top-navs.affix {
+    .nav-global > .container {
+      > .row {
+        min-height: 41px;
+        .header-content {
+          top: 0;
+          min-height: 41px;
+        }
+      }
+    }
+  }
+}
+
 .toolbar-fixed {
   &.toolbar-horizontal {
     .viewport,
